# multi-agent-azure

./: README.md  main.py  pyproject.toml
agents/: base_agent.py  coordinator_agent.py  math_agent.py  orchestrator_agent.py  planner_agent.py  research_agent.py  summary_agent.py
common/: common.py
memory/: cosmosdb_memory.py
tools/: ragSearch.py  toolkit.py
